同步于: 12月22日15时52分

--- a/pages/p1/956632.md
+++ b/pages/p1/956632.md
@@ -1,4 +1,4 @@
-### 中韩两版韩战历史 韩国人较真 谁先动手？(图)
+### 拜登接种武肺疫苗视频上微博热搜遭吐槽(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="朝鲜战场的中国志愿军（图片来源：视频截图）" src="https://img3.secretchina.com/pic/2020/10-28/p2806071a14202284-ss.jpg" style="height:340px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="拜登这段接种疫苗的视频也登上了中国微博热搜榜，遭中国网友吐槽（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/12-22/p2842741a420542646-ss.jpg" style="height:338px; width:600px"/>
   <br>
-   朝鲜战场的中国志愿军（图片来源：视频截图）
+   拜登这段接种疫苗的视频也登上了中国微博热搜榜，遭中国网友吐槽（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,123 +29,57 @@
   </div>
  </div>
  <p>
-  【看中国2020年10月28日讯】在美中关系不断恶化之际，
+  【看中国2020年12月22日讯】（看中国记者文俪综合报导）日前，美国民主党总统候选人
   <strong>
-   北京
+   拜登接种
   </strong>
-  当局高调纪念所谓的“
+  由辉瑞药厂（Pfizer）和德国BioNTech公司合作研发的
   <strong>
-   抗美援朝
-  </strong>
-  70周年”。
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+   <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
+    武汉肺炎
    </span>
+   疫苗
   </strong>
-  更是在纪念大会上发表强硬讲话，称韩战（朝鲜战争）是美帝国主义侵略并强加的战争。北京当局更是推出以“抗美援朝”为所谓主旋律的意识形态反美的国产宣传片《金刚川》。这被外界认为是在美中关系愈发紧张的背景下，中共当局加强国内洗脑宣传、煽动民族主义情绪以及反美情绪。
-  <strong>
-   美国
-  </strong>
-  和
-  <strong>
-   韩国
-  </strong>
-  之后也对韩战历史进行了表述，以正视听。
+  ，施打过程也在电视进行全程直播，据美媒报导指，之所以全程直播，是为了增加美国民众对疫苗的信心。而拜登这段接种疫苗的视频也登上了中国微博热搜榜，中国网友找到大量槽点，一顿猛吐槽：“黑人护士，这个细节满分、果然是老谋深算，做戏做足！”、“打的不一定是疫苗，但肯定是政治。”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  美国国务院发言人欧塔加斯（Morgan Ortagus）于美东时间24日在推特发文指出韩战真相：1950年6月25日，朝鲜在
-  <span href="https://www.secretchina.com/news/gb/tag/毛泽东" target="_blank">
-   毛泽东
-  </span>
-  的支持下侵略了韩国，当自由国家进行反击时，中国共产党更派出数十万的部队穿越鸭绿江，因此爆发韩战。
- </p>
- <blockquote class="twitter-tweet">
-  <p dir="ltr" lang="en">
-   The CCP claims war just “broke out” 70 years ago. Fact: North Korea invaded South Korea on June 25, 1950 with Mao’s backing. When free nations fought back, the CCP sent hundreds of thousands of troops across the Yalu, guaranteeing the Korean Peninsula’s devastation.
-   <span href="https://t.co/PUVYJwCHNF">
-    https://t.co/PUVYJwCHNF
-   </span>
-  </p>
-  — Morgan Ortagus (@statedeptspox)
-  <span href="https://twitter.com/statedeptspox/status/1319758679781113857?ref_src=twsrc%5Etfw">
-   October 23, 2020
-  </span>
- </blockquote>
- <p>
-  针对习近平称韩战是美帝国主义侵略一事，韩国外长康京和26日回应称，联合国安全理事会过去决议中已明示，韩战是因朝鲜南侵引发，这是无法否认的历史事实，也为国际社会所熟知。中韩双方对韩战的不同表述，引发热议。
- </p>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/北京" target="_blank">
-   北京
-  </span>
-  指韩战是美帝国主义侵略的这一说法，也引起了韩国民众的抵制和不满。
- </p>
- <p>
-  据《法广》27日报导指，有韩国民众在总统府青瓦台国民请愿问政平台上发起连署，要求限制在微博上转发符合北京版本的“纪念志愿军
-  <span href="https://www.secretchina.com/news/gb/tag/抗美援朝" target="_blank">
-   抗美援朝
-  </span>
-  出国作战70周年”内容的几个中国籍艺人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另据《韩联社》27日报导指，中共共青团25日晚间在微博官方账号以问答方式发文，题目是“朝鲜（北韩）战争是朝鲜侵略韩国（南韩）吗？”文中说答案是“不”，并声称南北朝鲜当时皆宣称对整个朝鲜半岛拥有主权，韩战是“一个国家的内战”。记者还在
+  武汉肺炎疫情自年初在
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  外交部例行记者会上询问发言人汪文斌，是否同意共青团“韩战并非南侵”的主张，汪文斌并未直接回答，但表示“韩战本来就是在朝鲜半岛南北双方之间发生的，属于内战”。
+  爆发后，迅速蔓延至全球，造成全球上百万人死亡。美国感染死亡人数也居高不下。据约翰霍普金斯大学（Johns HopkinsUniversity）统计，截至21日晚间，美国确诊病例累计达1800万6061例，死亡病例超过31万9000例。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  <strong>
-   韩战历史真相
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  1950年6月25日韩战（“
-  <span href="https://www.secretchina.com/news/gb/2020/02/12/921995.html" target="_blank">
-   朝鲜战争
+  美国食品药物管理局（FDA）授权紧急使用美国辉瑞（Pfizer）药厂和德国BioNTech合作研发的武汉肺炎病毒
+  <span href="https://www.secretchina.com/news/gb/tag/疫苗" target="_blank">
+   疫苗
   </span>
-  ”，韩国也称“6．25韩战”）爆发，同年10月1日，朝鲜领导人金日成致信毛泽东，请求中共出兵援助朝鲜。毛泽东立即行动，于10月2日凌晨两点下令早已居中朝边境集结待命的军队随时准备出发。
+  后，于14日正式展开辉瑞疫苗的大规模接种工作。另外，目前也开始替民众施打18日获得紧急使用授权的首批美国生技公司莫德纳（Moderna）疫苗。
+ </p>
+ <p>
+  据美媒CNBC报导指，现年78岁的
+  <span href="https://www.secretchina.com/news/gb/tag/拜登" target="_blank">
+   拜登
+  </span>
+  于当地时间21日在德拉瓦州纽瓦克（Newark）克里丝提娜医院（Christiana Hospital）施打辉瑞药厂（Pfizer）和德国BioNTech公司合作研发的疫苗，并且全程透过电视现场直播，以增加民众对疫苗的信心。拜登夫人吉儿（Jill）也已早一步接种武肺疫苗。
+ </p>
+ <p>
+  根据微博上拜登
+  <span href="https://www.secretchina.com/news/gb/tag/接种" target="_blank">
+   接种
+  </span>
+  疫苗的视频可见，拜登当天至少戴有两层口罩，由一名黑人医护施打。该段视频迅速登上微博热搜，截至发稿，阅读量就超过1.6亿次，讨论近7000条。
+ </p>
+ <p>
+  中国网友却认为，
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;filedall=1&amp;q=%E6%8B%9C%E7%99%BB&amp;t=1" target="_blank">
+   拜登
+  </span>
+  为了表现自己亲切弱势群体，特意找了黑人女医护为他接种。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +94,7 @@
   </div>
  </center>
  <p>
-  10月19日，中共志愿军出兵援朝。两个月后，中共军队将联合国军逼回38线以南，恢复了朝鲜的专制政权，但金日成的军队仅剩下75000人，仅是志愿军45万人的六分之一。
+  网友们留言：“还特意找个黑人给他打，戏真足。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +109,7 @@
   </div>
  </center>
  <p>
-  12月7日，收复平壤后，金日成让出指挥权给中共。彭德怀随即成为中朝联军总司令。彭拟在38线上停下来，但毛泽东拒绝。
+  “打的不是疫苗，是政治。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,7 +124,52 @@
   </div>
  </center>
  <p>
-  1951年1月初，彭德怀拿下汉城，但中共的“胜利”是靠人海战术，以人员巨大伤亡为代价。
+  “谁知道打的是新冠疫苗还是葡萄糖。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “故意的秀，打黑女打，代表自己亲切弱势群体。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “拜登想表示，即使是黑人，也是我们的白衣天使。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “他哪里比特朗普好？越是表面和善的人越危险。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,7 +188,7 @@
   </ins>
  </center>
  <p>
-  1月25日，联合国军反攻，志愿军伤亡极为惨重，苏联官方解密文件称，中国死亡人数为100万。
+  “搞舆论、政治正确，民主党比特朗普共和党会玩多了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,10 +203,7 @@
   </div>
  </center>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
-   美国
-  </span>
-  韩国问题研究专家米歇尔称，韩战造成“朝鲜军民死亡300万人，韩国军和中国军队死亡200万，其中志愿军死45万，伤50万。联合国军方面美军死33,000人，英军1,000人，其它国家4,000人；几十万儿童成为孤儿，数百万人无家可归，数百万人终身残废”。
+  “政治作秀罢了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -242,7 +218,7 @@
   </div>
  </center>
  <p>
-  60多年来，中共一直欺骗国人说是“以美国为首的联合国军队越过‘三八线’，把战火一直烧到了鸭绿江边”，“美帝国主义亡我之心不死”，造谣美军企图入侵中国东北，号召全国人民“抗美援朝、保家卫国”。以此来达到人海战术，“拼垮美国”。
+  “我希望特朗普出来指证拜登打的不是疫苗。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -257,7 +233,7 @@
   </div>
  </center>
  <p>
-  事实上，近年来各方被解密材料，特别是美国的解密档案来看，联合国、美国和其他盟国当时并没有准备与中共作战，并且还十分努力阻止这场战争的发生。
+  还有网友调侃道：“打完挂了或者感染那才是大新闻”、“黑人护士，针管里是葡萄糖吧，表演细节满分”、“戏可真多”、“我咋有点担心这货扛不到上任呢”、“打的是狂犬疫苗，大家不必惊慌”、“特朗普也就发发推特，这货直接玩直播啊，下一步就该带货了”、“最好找个男的黑人，做变性手术的女权同性恋者帮他打”、“护士太猛，0.1秒扎完”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,27 +247,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  另有网友质疑医护的接种程序不专业：“护士头发没扎起来，不符合无菌操作仪容仪表，容易污染，拿注射器手法不对，执笔式，注射过程不符合两快一慢原则，不是无痛注射，拔针无按压，容易造成皮下出血淤青...这护士要在我国毕不了业”、“毕竟特意找的黑人护士，可选范围小了，估计是专业的不好找到”、“护士头发是认真的么？打完直接用手按一下，什么操作？”
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -304,6 +261,43 @@
     </center>
    </div>
   </center>
+  <p>
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40rY"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -321,13 +315,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950664.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950664.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/950664.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/28/950664.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/956632.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/956632.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/956632.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/22/956632.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/950664.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/956632.md' width='0px' height='0px'/>
