--- a/pages/nf4514/n12637805.md
+++ b/pages/nf4514/n12637805.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月22日讯】（大纪元记者徐简、戴芙若综合报导）在今年圣诞假日之前，
+ 【大纪元2020年12月22日讯】（大纪元记者徐简综合报导）在今年圣诞假日之前，
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
   中共病毒
  </ok>
