--- a/pages/p8/956190.md
+++ b/pages/p8/956190.md
@@ -1,4 +1,4 @@
-### 真正的善良 会为对方保留“自尊”(图)
+### 对妻子全心全意的司马光(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,17 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="善良 自尊 智慧 情商" src="https://img3.secretchina.com/pic/2020/8-18/p2757432a489068037-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="司马光 西江月 婚姻 资治通鉴" src="https://img3.secretchina.com/pic/2020/10-17/p2798582a679433304-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   真正的
-   <strong>
-    善良
-   </strong>
-   ，是给人留点
-   <strong>
-    自尊
-   </strong>
-   。(图片来源：Adobe stock）
+   对妻子全心全意的司马光。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,134 +21,107 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  深度報導紀錄片《大疫襲來》- 2020年疫情大流行的背後，哪些真相被忽略、被掩蓋？](http://141.164.51.119:10000/videos/news/../corona/index.html)
-
-#### [ 🔥  音频：中央党校蔡霞教授在红色后代秘密会议上的发言：必须换习、否则亡党！（蔡霞8月17日已被处理）](http://141.164.51.119:10000/videos/news/caixia.html)
-
-#### [ 🔥  蓬佩奥捷克演讲：今天一个更大的威胁是中共及其迫胁和控制活动所构成的威胁](http://141.164.51.119:10000/videos/news/pompeo6.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <span href="https://www.secretchina.com/news/gb/tag/善良" target="_blank">
-   善良
+  <strong>
+   司马光
+  </strong>
+  是中国
+  <span href="https://zh.wikipedia.org/wiki/%E5%8C%97%E5%AE%8B">
+   北宋
   </span>
-  是一个人的素养，也是一种能力，是在生活的细微之处显示出对他人的尊重与关怀。
+  时期著名的政治家、文学家，史学家，在当时有着举足轻重的地位。他和夫人张氏从成婚之日起到去世，一直是一夫一妻，相守到老。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  有一个酒店老板，无意间推开包间的门，却发现服务员围在一起，正在吃桌上客人留下的剩菜。
+  <span href="https://zh.wikipedia.org/wiki/%E5%8F%B8%E9%A9%AC%E5%85%89">
+   司马光
+  </span>
+  成婚之后，和夫人张氏感情极好。张氏年轻貌美且宽仁大度，正是司马光心中理想的贤内助。
  </p>
  <p>
-  员工们看到老板突然进来，纷纷停下筷子，脸上满是尴尬。这时候，老板突然跑去自己拿了一双筷子，招呼着他们开始一起吃。
- </p>
- <p>
-  人们为这个老板的
+  一天，夫人过生日，
+  <span href="https://www.secretchina.com/news/gb/tag/司马光" target="_blank">
+   司马光
+  </span>
+  隆重举办一场生日庆典，好友庞籍夫妇和诸多友人都到场庆贺。酒席散去，剩下司马光和张夫人两人。张夫人挽着司马光的手漫步月下。一贯严谨而沉闷的司马光才思涌动，连呼“笔墨伺候”，一首绝妙好词《
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/智慧" target="_blank">
-    智慧
+   西江月
+  </strong>
+  》一挥而就：
+ </p>
+ <p>
+  <strong>
+   宝髻松松挽就，铅华淡淡妆成。红烟翠雾罩轻盈，飞絮游丝无定。
+  </strong>
+ </p>
+ <p>
+  <strong>
+   相见争如不见，有情何似无情。笙歌散后酒初醒，深院月斜人静。
+  </strong>
+ </p>
+ <p>
+  词写成之后，司马光在月下大声吟诵，把张夫人羞得躲入屋中。仆人看到如此情形，人人偷笑。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  第二天，官场人人疯传此词，大家都说“相见争如不见，有情何似无情”，真是道尽人间情事。府衙开会时，司马光都不好意思见同事。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  于是，司马光又恢复往日一本正经、不苟言笑的面目。不过，张夫人明白，在丈夫一脸平静的下面，有一颗对自己全心全意的心。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  可惜，幸福的
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/婚姻" target="_blank">
+    婚姻
    </span>
   </strong>
-  所打动。小小的一个动作，既巧妙化解了尴尬，又给员工留足了体面。
- </p>
- <p>
-  有人赞老板的高
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/情商" target="_blank">
-    情商
-   </span>
-  </strong>
-  ，而高情商背后往往都是真善良。
- </p>
- <p>
-  曾经有这样一段视频：
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一个瘦弱的小男孩，为了不让同学发现自己家庭的窘迫，每天带着空饭盒去学校。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  每次下课后，他都是第一个走出教室，表面上是去洗手间，实际上是想去喝口凉水充饥。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有一天，像往常一样，他一下课去了卫生间。肚子里发出饥肠辘辘的响声，脸色苍白的他，打开水龙头狠狠地咽了几口凉水。回到教室，看着同学们开心地吃着便当，他脸上写满了失落。肚子里发出饥饿的抗议，小男孩叹了一口气。正当他盯着饭盒入神的时候，却发现了些“异样”。好奇地打开后才发现，空空的饭盒里已经装满了食物。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  此时，周围的小朋友有的对他投来了善意的微笑，有的仿佛什么都没发生继续津津有味地吃饭。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  原来，善良的同学们发现了小男孩空饭盒的秘密。趁男孩去卫生间的空档，他们商量好各自从自己的便当中，拿出一部分放到了小男孩的空饭盒中。有人贡献了三明治，有人贡献了水果，有人贡献了胡萝卜……空空的饭盒被塞得满满当当。
+  总是有它的不幸。两人成婚数年，张夫人的肚子一直没有动静。张夫人很自责，几次提出要给司马光纳妾，都被司马光拒绝。一晃十来年过去，眼看司马光年近五十，两人膝下还是一子也无。张夫人着急，让人花了五十万文钱买了一个女子充作小妾。张夫人苦心调教好久，一天，让小妾打扮得花枝招展，到书房找寻司马光。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -171,9 +136,9 @@
   </div>
  </center>
  <p style="text-align: center;">
-  <img alt="小男孩原本空空的饭盒里，已经装满了食物。" src="https://img2.secretchina.com/pic/2019/4-12/p2402092a386519201-ss.jpg"/>
+  <img alt="幸福的婚姻总是有它的不幸。" src="https://img3.secretchina.com/pic/2020/9-26/p2783682a341513898-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   小男孩原本空空的饭盒里，已经装满了食物。(图片来源：Adobe stock）
+   幸福的婚姻总是有它的不幸。（图片来源：Adobestock）
   </br>
  </p>
  <center>
@@ -189,7 +154,7 @@
   </div>
  </center>
  <p>
-  等男孩回来后，他们又特别默契地回到了各自座位上，为了不让小男孩尴尬，没有人戳破这个真相。
+  小妾端着茶水敲门，司马光正在看书，头也不抬，说了声“进来”。小妾进来之后，递上茶水，司马光接过，喝了一口，还是没有抬头。小妾退在司马光身后，翻动书架上的书籍，故意把一本书弄掉在地上。听到声响，司马光回头，看到屋中站了一个陌生女子，他有些奇怪，可一句话没问，转头就想继续看书。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -204,7 +169,7 @@
   </div>
  </center>
  <p>
-  无声的举动，却是最暖心的关怀，看完后，觉得特别温暖。正如片尾的字幕：帮助别人，方法永远比你想像的简单。
+  小妾连忙上前，晃了晃捡起的书，说：“大人，不知这是何书？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -219,11 +184,11 @@
   </div>
  </center>
  <p>
-  小孩子们用自己最天真的善良，维护了小男孩脆弱的
-  <span href="https://www.secretchina.com/news/gb/tag/自尊" target="_blank">
-   自尊
+  司马光看了一眼，起身，拱手，说：“这乃是《
+  <span href="https://zh.wikipedia.org/wiki/%E5%B0%9A%E4%B9%A6_(%E4%B9%A6)">
+   尚书
   </span>
-  心，既帮助他解决了困难，又给他留足了体面。
+  》。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -238,7 +203,7 @@
   </div>
  </center>
  <p>
-  善良是一种天性，也是一种能力，是在生活的细微之处显示出对他人的尊重与关怀。
+  说完，司马光坐下，继续看书。小妾又一次被无视。小妾在司马光身后徘徊很久，想要留下，又没有什么别的法子；想要离开，又担心张夫人的责备。最后，屋外的张夫人实在看不下去，把小妾唤了出来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -253,7 +218,45 @@
   </div>
  </center>
  <p>
-  有句话说得好：
+  晚饭时间，司马光询问夫人，那位女子是怎么回事。张夫人只好如实交代。司马光连说“荒唐”，叫人唤来小妾，把契约交还，让其家人领走。司马光再三交代张夫人，此后再也不能做这等事情。两人虽然无子，完全可以从家族中过继一个孩子，何必要纳妾呢？张夫人听了，泪流满面。无奈之下，两人只好过继了司马光大哥司马旦的次子，并取名为司马康。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  司马光说到做到，从成婚之日起到去世，一直是一夫一妻，相守到老。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  五十来岁时，司马光和
+  <span href="https://zh.wikipedia.org/wiki/%E7%8E%8B%E5%AE%89%E7%9F%B3">
+   王安石
+  </span>
+  闹翻，被迫离开朝廷，到洛阳闭门著书。从宋英宗时期开始，司马光就开始編著《
+  <strong>
+   资治通鉴
+  </strong>
+  》，直到宋神宗元丰七年（1084年），前后一共花费19年的光阴。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,8 +274,11 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  真正的善良，是行善而不扯起善良的旗帜；是积德不需人见，善意匡如清流；是风光霁月，暗室不欺。
+ <p style="text-align: center;">
+  <img alt="司马光" src="https://img3.secretchina.com/pic/2020/12-18/p2840221a38940033-ss.jpg" style="height:501px; width:600px"/>
+  <br>
+   司马光（图片来源：公有领域）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -287,7 +293,7 @@
   </div>
  </center>
  <p>
-  善良需要方法，有时候不加遮掩的善良也会“灼伤”别人。
+  张夫人看到丈夫整日足不出户，心中担忧，在和司马光商量之后，在洛阳郊外买一处宅院，种上一些花草。司马光命名为“独乐园”，取其洁身自好之意。于是，司马光最常做的事情，除了读书、写书，就是陪同夫人一起到独乐园散步。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -302,7 +308,7 @@
   </div>
  </center>
  <p>
-  有一张摄影作品《牵手》，曾引发广泛争议。
+  宋神宗元丰七年，张夫人病故。司马光万分悲痛，写下《叙清河郡君》（张夫人受封为清河郡君）一文，以表哀思。他把自己关在书房中不出门。十多天之后，养子司马康再三劝说，司马光才走出书房，到独乐园走走。看到园中任何一处，都仿佛有张夫人的身影，司马光身心俱伤。他在一处亭柱上题诗：“暂来还似客，归去不成家。”短短十数天，再入独乐园，却发现独乐园既熟悉，又陌生。没有张夫人的陪伴，身在家中，也仿佛是在做客。没有张夫人的家，也不再是家。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -317,7 +323,7 @@
   </div>
  </center>
  <p>
-  两个小女孩站在一块写有“手拉手助学”的黑板前，受捐助的小女孩低着头看着地面，捐赠的小女孩则抬着头往上看。两人虽然牵着手，但是左侧的小女孩只是勉强伸出了一只手指。在摄影师的镜头下，左侧那个受捐助的小女孩脸上，写满了难堪。
+  好友文彦博看到司马光整天闭门不出，担心他愁坏身子，连番邀请他出门散散心。文彦博宴请司马光之后，洛阳其他的友人也纷纷发出邀请。于是，司马光喝酒听曲，一玩就是几十天。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -332,7 +338,7 @@
   </div>
  </center>
  <p>
-  孟子曰：恻隐之心，人皆有之。
+  独乐园的园丁名叫吕直，追随司马光数十年，看到司马光昏沉不醒的样子，连连叹息。司马光就问吕直怎么了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -347,7 +353,7 @@
   </div>
  </center>
  <p>
-  然而，真正的善良是从心底把自己和受助者安置在同一高度，而不是站在更高的位置，对受捐助者进行“施舍式救助”。
+  吕直回答：“前些日子花木茂盛，景色动人。往日学士读书之余，夫人经常和学士一起漫步园中，饱览春色。可如今学士一出数十天，不但是辜负大好春光，连一页书也没看，实在是有负夫人啊。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -362,7 +368,7 @@
   </div>
  </center>
  <p>
-  真正的善良，是在帮助别人的同时，给他人留足体面和自尊。
+  司马光听闻园丁此言，心中万分惭愧，从此之后，再也不出门参加酒宴。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -376,27 +382,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+ <p>
+  两年之后，司马光重出江湖，官拜宰相。又两年之后，司马光病逝。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -409,6 +396,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:wendy
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40kQ"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -426,13 +447,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943419.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943419.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943419.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/21/943419.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956190.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956190.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956190.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/23/956190.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/943419.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/956190.md' width='0px' height='0px'/>
