--- a/pages/nsc413/n12637805.md
+++ b/pages/nsc413/n12637805.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【疫情更新12.22】40多国颁旅行禁令" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1292507230-600x400.jpg"/>
+<div><img alt="【疫情更新12.22】CDC：新毒株恐已来美" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/06/shutterstock_1662701254-600x400.jpg"/>
 <div class="caption">
  多国对英国实行了旅行禁令。(Hector Vivas/Getty Images)
 </div></div><hr/>
