同步于: 12月23日7时3分

--- a/pages/soh6/456058.md
+++ b/pages/soh6/456058.md
@@ -1,4 +1,4 @@
-### 【选情更新12/22】美议员：参院对选举人团的实质挑战在降低
+### 【选情更新12/22】乔州参院报告：选举结果不可信 应撤销认证
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -19,39 +19,54 @@
   <span class="meta">
    【希望之声2020年12月22日】（本台记者凌杉综合报导）
   </span>
-  <ok href="/term/8911">
-   美国国会
-  </ok>
-  参议员约翰·特恩（John Thune）表示，他感到参院共和党人对
+  美国总统川普（特朗普）近日发推文表示，他不准备采用“戒严”的方法扭转大选局势。这样，1月6日即将进行的两院联席会议便成为人们关注的焦点。12月21日（周一），川普总统和彭斯副总统在白宫会见了几位计划在联席会议挑战有争议州的
   <ok href="/term/20650">
    选举人团
   </ok>
-  的实质挑战趋势正在下跌。
+  投票结果的国会议员。
  </p>
  <p>
-  以下是希望之声为您整合的12月22日（周二）更新：
+  发起这次挑战的阿拉巴马州联邦众议员布鲁克斯（Mo Brooks）表示：“我不认为还有任何疑问，确实有很多选民舞弊和选举盗窃存在。事实上，我非常清楚，这次选举被社会主义民主党人窃取了。”
  </p>
- <h2>
+ <p>
+  除了布鲁克斯，佛州的盖茨（Matt Gaetz）、亚利桑那州的比格斯（Andy Biggs）、俄亥俄州的乔丹（Jim Jordan）、乔治亚州的希斯（Jody Hice）等数名众议员参加了这次会议。
+ </p>
+ <p>
+  另外，当选参议员、阿拉巴马州的塔伯维尔（Tommy Tuberville）也与总统川普通话，表示他就将加入布鲁克斯等众议员的行列，阻止拜登获得有争议州的选举人票。
+ </p>
+ <p>
+  以下是希望之声为您整合的12月22日（周二）选情更新：
+ </p>
+ <h3>
+  乔州参院报告：选举结果不可信 应撤销认证
+ </h3>
+ <p>
+  乔治亚州负责审查2020年大选舞弊证据的参议员司法小组委员会主席近日发布了一份长达15页的报告，指出该州的大选结果是不可信的，并建议废除该州政府认证的大选结果。
+ </p>
+ <p>
+  乔州参院司法小组委员会主席利根（William Ligon）是在审查了对该州重新计票过程、审计过程、正在进行的调查以及正在推进的诉讼后，得出的这一结论。他的小组委员会还于2020年12月3日在乔州大选公开听证会上听取了证人的证词。
+ </p>
+ <p>
+  该报告得出的结论是，2020年11月3日的大选是混乱的，任何报告的结果都必须被视为不可信。报告指出了乔州选举的两大问题是：乔州选举官员未能执行该州的选举规则；乔州未能在签名验证和审核过程中保证足够的透明度。
+ </p>
+ <h3>
   美参议员：参院对
   <ok href="/term/20650">
    选举人团
   </ok>
   的实质挑战在降低
- </h2>
+ </h3>
  <p>
   根据Newsmax周二（12月22日）报道，美国参议员约翰·特恩说，目前参院共和党仍尚无人正式宣布在国会1月6日挑战选举人结果。
  </p>
  <p>
-  迄今为止，已经有多位众议员宣布准备在国会挑战拜登。虽然有多位参议员提到这一流程，但是目前尚无人在媒体上正式公开声明这一点。
- </p>
- <p>
-  特恩说，“我认为目前有些参院共和党人有意这样做”，“但是我不知道是否有任何人正式开始准备这一做法。”
+  迄今为止，已经有多位众议员宣布准备在国会挑战拜登。虽然有多位参议员提到这一流程，但是目前尚无人在媒体上正式公开声明这一点。特恩说，“我认为目前有些参院共和党人有意这样做”，“但是我不知道是否有任何人正式开始准备这一做法。”
  </p>
  <p>
   根据美国选举法程序，至少需要1名众议员与1名参议员在1月6日提交书面文件，质疑选举结果，从而引发两院关于选举争议的投票，在争议开始后，两院需要获得半数以上议员同意，方能推翻结果。
  </p>
- <h2>
-  川普顾问珍娜·
+ <h3>
+  川普法律顾问
   <ok href="/term/423790">
    埃利斯
   </ok>
@@ -60,7 +75,7 @@
    叛乱法
   </ok>
   》
- </h2>
+ </h3>
  <p>
   川普高级法律顾问珍娜·
   <ok href="/term/423790">
@@ -100,11 +115,11 @@
   </ok>
   》使用是在1992年，美国政府针对洛杉矶的暴动实施该法案。
  </p>
- <h2>
-  乔治亚州：8,000名外州要求邮寄选票人士举止非法
- </h2>
+ <h3>
+  乔州州务卿：8,000名外州要求邮寄选票人士举止非法
+ </h3>
  <p>
-  22日，乔治亚州州务卿布拉德‧拉芬斯珀格（Brad Raffensperger）表示，境外选民试图破坏乔治亚州投票的做法将是非法的。
+  12月22日，乔治亚州州务卿拉芬斯珀格（Brad Raffensperger）表示，境外选民试图破坏乔治亚州投票的做法将是非法的。
  </p>
  <p>
   相关邮寄选票要求被指针对1月5日共和党参议员选举。
@@ -112,9 +127,9 @@
  <p>
   拉芬斯珀格称，该州对8000名在外州居住，但要求邮寄选票的人士发送了警告信件，称不具备资格在该州选举中投票属于重罪，定罪后可判处最高10年监禁和最高10万美元的罚款。
  </p>
- <h2>
+ <h3>
   乔州投票站解雇两名指证选举舞弊的员工
- </h2>
+ </h3>
  <p>
   乔治亚富尔顿县（Fulton County）选举委员会3名专员本周宣布解雇2名员工，两人均在选举中指证选举舞弊行为。
  </p>
